--- a/coffeesize/pom.xml
+++ b/coffeesize/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>de.detim.techtalk.observability</groupId>
-	<artifactId>coffeetype</artifactId>
+	<artifactId>coffesize</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>CoffeeTypeService</name>
 	<description>Demo project for Spring Boot</description>
