adding sample data

--- a/coffeesize/src/main/resources/application.properties
+++ b/coffeesize/src/main/resources/application.properties
@@ -10,7 +10,8 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
 otel.service.name=${spring.application.name}
@@ -20,5 +21,3 @@ otel.exporter.otlp.protocol=grpc
 otel.traces.exporter=otlp
 otel.logs.exporter=none
 otel.metrics.exporter=none
-
-#otel.exporter.otlp.metrics.endpoint=http://localhost:4317
